tests/snapshots/run_wpt_conformance__coreml_abs_float16_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
abs.https.any.js abs float16 4D tensor, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'absInput' must be of rank 3, instead got a multi-array value of rank 4.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    absInput: f16[2, 2, 2, 3];
  }

  nodes {
    [absOutput] = abs(absInput, label="");
  }

  outputs { absOutput; }
}
