tests/snapshots/run_wpt_conformance__coreml_abs_float32_negative_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
abs.https.any.js abs float32 negative 0D scalar, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'absInput' must be of rank 4, instead got a multi-array value of rank 1.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    absInput: f32[];
  }

  nodes {
    [absOutput] = abs(absInput, label="");
  }

  outputs { absOutput; }
}
