tests/snapshots/run_wpt_conformance__coreml_abs_int64_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
abs.https.any.js abs int64 4D tensor, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type cast: Output '0' has incorrect type for operator 'ios17.cast'. Expected { tensor<fp32, [...]>, tensor<fp16, [...]>, tensor<uint16, [...]>, tensor<int32, [...]>, tensor<uint8, [...]>, tensor<int16, [...]>, tensor<int8, [...]>, tensor<bool, [...]> }; got tensor<int64, [1, 1, 1, 5]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    absInput: i64[1, 1, 1, 5];
  }

  nodes {
    [absOutput] = abs(absInput, label="");
  }

  outputs { absOutput; }
}
