tests/snapshots/run_wpt_conformance__coreml_abs_int8_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
abs.https.any.js abs int8 4D tensor, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type abs: Param 'x' has incorrect type for operator 'ios17.abs'. Expected { tensor<int32, [...]>, tensor<fp32, [...]>, tensor<fp16, [...]> }; got tensor<int8, [1, 2, 2, 1]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    absInput: i8[1, 2, 2, 1];
  }

  nodes {
    [absOutput] = abs(absInput, label="");
  }

  outputs { absOutput; }
}
