tests/snapshots/run_wpt_conformance__coreml_add_float16_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
add.https.any.js add float16 1D constant tensors, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '/private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983258768_0_A0B33AA0-5FC4-417C-BA42-E1CA04FC1676.mlmodelc/model.mil' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([107, 209, 62, 212, 158, 78, 152, 80, 19, 212, 123, 213, 20, 84, 161, 212, 234, 202, 251, 70, 61, 86, 250, 82, 185, 212, 192, 73, 71, 76, 253, 85, 46, 83, 38, 211, 238, 78, 142, 204, 149, 82, 96, 212, 250, 80, 127, 207]);
    operand_1: f16[24] @bytes([120, 211, 154, 209, 127, 213, 138, 63, 78, 85, 242, 81, 90, 85, 97, 81, 136, 211, 206, 75, 106, 84, 116, 199, 141, 207, 27, 214, 10, 161, 219, 212, 141, 79, 102, 211, 150, 85, 44, 79, 110, 207, 170, 213, 18, 79, 234, 78]);
  }

  nodes {
    [output] = add(operand_0, operand_1, label="");
  }

  outputs { output; }
}
Error(s) occurred compiling MIL to BNNS graph:
[CreateBnnsGraphProgramFromMIL]: BNNS failed to compile due to an exception: Storage Reader expects file format version 2. at location 
 @ CreateBnnsGraphProgramFromMIL
